Removed ex staff/members who are long gone, updated the main page logo and removed curseforge scanning stuff

--- a/css/main.css
+++ b/css/main.css
@@ -1,1 +1,1 @@
-body{background:#ededed}header{border-bottom:1px solid #cecece}header h1 small:before{content:"|";margin:0 .5em;font-size:1.6em}.push,footer{height:100px;background:#ccc}.nodecraft-header{height:75px;display:block}
+body{background:#ededed}header{border-bottom:1px solid #cecece}header h1 small:before{content:"|";margin:0 .5em;font-size:1.6em}.push,footer{height:100px;background:#ccc}.logo-header{height:75px;display:block}
